--- a/static/html/index.html
+++ b/static/html/index.html
@@ -34,8 +34,8 @@
 
     <div class="container">
         <div class="sidebar" id="sidebar">
-            <div class="menu-item active" data-page="users" id="menuUsers">用户管理</div>
-            <div class="menu-item" data-page="coupons" id="menuCoupons">卡券管理</div>
+            <div class="menu-item active" data-page="users" id="menuUsers" style="display:none">用户管理</div>
+            <div class="menu-item" data-page="coupons" id="menuCoupons" style="display:none">卡券管理</div>
             <div class="menu-item" data-page="my-coupons" id="menuMyCoupons">我的卡券</div>
         </div>
         <div class="content">
