fix expire & fix notify

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -100,6 +100,7 @@
                                 <th>卡券码</th>
                                 <th>类型</th>
                                 <th>状态</th>
+                                <th>领取人</th>
                                 <th>创建时间</th>
                                 <th>操作</th>
                             </tr>
